--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -64,13 +64,39 @@ $ echo 0 >  /sys/class/leds/GPIO3_D4/brightness
 
 ### 调试串口使用
 
-**说明**
-
-40PIN座子右下脚 35-RX ，37-TX  ，39 - GND
-
-波特率：1500000 
+**波特率：1500000** 
 
 >接入座子的USB转串口线也需要支持 1500000 波特率才能正常通信
+
+
+
+**查看DEBUG引脚**
+
+kickpi开发板调试串口一般内嵌到扩展引脚上，可通过[扩展引脚章节](#ExpansionPin) 查看对应的 DEBUG 引脚位置，一般按顺序排列为 `UART_RX_DEBUG`、`UART_TX_DEBUG`、`GND`。
+
+
+
+**调试串口线说明**
+
+目前提供的调试串口线有四根线，红色的为`VCC`，绿色的为`TX`，白色的为`RX`，黑色的为`GND`，一般不需要连接`VCC`。
+
+![image-20241231145656021](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241231145656021.png)
+
+> 其他调试工具线同理，只需连接 TX RX GND即可
+
+
+
+**开发板调试串口接线**
+
+* 调试串口位置接线说明
+
+调试线`TX`连接主板上的`RX`，`RX`连接主板上的`TX`，`GND`连接主板上的`GND`，不需要连接`VCC`。
+
+![image-20241231151848065](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20241231151848065.png)
+
+> 主板上的PIN：RX	TX	GND
+>
+> 调试线的PIN：TX	RX	GND
 
 
 
