--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -172,11 +172,11 @@ GPIO0-D3	= gpio0 - ((4 - 1) * 8 + 3)		= gpio0-27 		= (0 * 32) + 27 	= 27
 
 
 
-### USB DP - Type C
+### USB Type C
 
 ```
 Type-c 接口多功能
-	支持显示输出
+	支持DP显示输出
 	支持HOST模式，U盘、鼠标等设备接入
 	支持DEVICE模式
 	支持自动识别切换功能模式
