--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -201,15 +201,11 @@ HDCP v2.3 and HDCP v1.4
 
 RK3568 配备8路ADC，K1开发板引出ADC3通道到扩展引脚座
 
-### 读取ADC3值
+**读取ADC值**
 
 ```
 $ cat /sys/bus/iio/devices/iio\:device0/in_voltage3_raw
 ```
-
-
-
-### 功能测试
 
 
 
