--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -199,7 +199,7 @@ HDCP v2.3 and HDCP v1.4
 
 ## ADC
 
-RK3568 配备8路ADC，K1开发板引出ADC3通道到扩展引脚座
+可通过[扩展引脚章节](#ExpansionPin) 查看对应的 ADC 位置及通道号
 
 **读取ADC值**
 
