--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -204,10 +204,10 @@ HDCP v2.3 and HDCP v1.4
 **读取ADC值**
 
 ```
-$ cat /sys/bus/iio/devices/iio\:device0/in_voltage3_raw
+$ cat /sys/bus/iio/devices/iio\:device0/in_voltage*_raw
 ```
 
-
+> 读取通道4的电压值
 
 
 
