--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -207,7 +207,9 @@ HDCP v2.3 and HDCP v1.4
 $ cat /sys/bus/iio/devices/iio\:device0/in_voltage*_raw
 ```
 
-> 读取通道4的电压值
+> 读取通道4的电压值 
+>
+> $ cat /sys/bus/iio/devices/iio\:device0/in_voltage4_raw
 
 
 
@@ -218,9 +220,7 @@ $ cat /sys/bus/iio/devices/iio\:device0/in_voltage*_raw
 板载 Micro SD Card 接口
 ```
 
-### 功能测试
-
-
+### 
 
 ## IR
 
