--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -215,9 +215,10 @@ $ cat /sys/bus/iio/devices/iio\:device0/in_voltage*_raw
 
 ## SD 卡
 
+支持SD存储卡，板载Micro SD Card接口
+
 ```
-支持SD卡识别
-板载 Micro SD Card 接口
+
 ```
 
 ### 
