--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -217,19 +217,13 @@ $ cat /sys/bus/iio/devices/iio\:device0/in_voltage*_raw
 
 支持SD存储卡，板载Micro SD Card接口
 
-```
 
-```
-
-### 
 
 ## IR
 
-​		支持红外遥控
+​		支持红外遥控，目前以适配 KICKPI 遥控器
 
-### 功能测试
-
-
+### 
 
 ## 以太网
 
