--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -227,14 +227,7 @@ $ cat /sys/bus/iio/devices/iio\:device0/in_voltage*_raw
 
 ## 以太网
 
-```
-eth0 / eth1 (1000M x 2)
-速率测试:
-上行：954 Mbits/sec
-下行：858 Mbits/sec
-```
-
-### 功能测试
+​		支持千兆以太网 X2
 
 
 
