--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -233,11 +233,7 @@ $ cat /sys/bus/iio/devices/iio\:device0/in_voltage*_raw
 
 ## WIFI & BT
 
-```
-板载 AP6256 WIFI/BT 二合一模组
-```
-
-### 功能测试
+​		板载8822CS模块
 
 
 
