--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -221,21 +221,19 @@ $ cat /sys/bus/iio/devices/iio\:device0/in_voltage*_raw
 
 ## IR
 
-​		支持红外遥控，目前以适配 KICKPI 遥控器
+支持红外遥控，目前以适配 KICKPI 遥控器
 
 ### 
 
 ## 以太网
 
-​		支持千兆以太网 X2
+支持千兆以太网 X2
 
 
 
 ## WIFI & BT
 
-​		板载8822CS模块
-
-
+板载8822CS模块
 
 
 
@@ -246,7 +244,7 @@ $ cat /sys/bus/iio/devices/iio\:device0/in_voltage*_raw
 ### 功能测试
 
 ```
-支持EC20 模块
+支持EC20/EC200模块
 ```
 
 **信号出现感叹号问题**
