--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -1,6 +1,6 @@
 # 硬件功能测试
 
-## 拓展引脚
+## 拓展引脚<a id="ExpansionPin-K7"></a>
 
 **K7拓展引脚列表**
 
@@ -72,7 +72,7 @@ $ echo 0 >  /sys/class/leds/GPIO3_D4/brightness
 
 **查看DEBUG引脚**
 
-kickpi开发板调试串口一般内嵌到扩展引脚上，可通过[扩展引脚章节](#ExpansionPin) 查看对应的 DEBUG 引脚位置，一般按顺序排列为 `UART_RX_DEBUG`、`UART_TX_DEBUG`、`GND`。
+kickpi开发板调试串口一般内嵌到扩展引脚上，可通过[扩展引脚章节](#ExpansionPin-K7) 查看对应的 DEBUG 引脚位置，一般按顺序排列为 `UART_RX_DEBUG`、`UART_TX_DEBUG`、`GND`。
 
 
 
