--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -199,7 +199,7 @@ HDCP v2.3 and HDCP v1.4
 
 ## ADC
 
-可通过[扩展引脚章节](#ExpansionPin) 查看对应的 ADC 位置及通道号
+可通过[扩展引脚章节](#ExpansionPin-K7) 查看对应的 ADC 位置及通道号
 
 **读取ADC值**
 
@@ -221,9 +221,9 @@ $ cat /sys/bus/iio/devices/iio\:device0/in_voltage*_raw
 
 ## IR
 
-支持红外遥控，目前以适配 KICKPI 遥控器
+支持红外遥控，目前已适配 KICKPI 遥控器
 
-### 
+
 
 ## 以太网
 
