--- a/rk3576/zh/14-硬件老化测试.md
+++ b/rk3576/zh/14-硬件老化测试.md
@@ -8,6 +8,8 @@
 
 ## **压力测试 StressTest**
 
+> Android 平台
+
 设备上使用Stresstest 工具，对待测设备的各项功能进行压力测试，确保整个系统运行的稳定性。SDK
 
 通过打开计算器应用，输入 “83991906=” 暗码，可启动StressTest应用，进行各功能压力测试。
@@ -47,6 +49,8 @@ DDR 变频测试
 
 
 ## 硬件老化程序
+
+> Android 平台
 
 ### 拷贝VPU测试视频
 
