--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -159,6 +159,10 @@ GPIO0-D3	= gpio0 - ((4 - 1) * 8 + 3)		= gpio0-27 		= (0 * 32) + 27 	= 27
 
 ### USB 3.0 - Type A ( 1 - 3 口)
 
+#### 硬件接线
+
+![image-20250110152646099](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250110152646099.png)
+
 **USB鼠标/键盘测试**
 
 ```
