--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -213,7 +213,7 @@ $ cat /sys/bus/iio/devices/iio\:device0/in_voltage*_raw
 
 支持SD存储卡，板载Micro SD Card接口
 
-
+![image-20250110152735195](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250110152735195.png)
 
 ## IR
 
@@ -236,6 +236,8 @@ $ cat /sys/bus/iio/devices/iio\:device0/in_voltage*_raw
 ## 4G 模块
 
 ### 硬件接线
+
+![image-20250110152808407](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250110152808407.png)
 
 ### 功能测试
 
@@ -260,6 +262,8 @@ adb shell settings put global captive_portal_server 204.gentool.top
 ## Headphone
 
 ### 硬件接线
+
+
 
 ### 功能测试
 
