--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -263,7 +263,7 @@ adb shell settings put global captive_portal_server 204.gentool.top
 
 ### 硬件接线
 
-
+![image-20250110152818915](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250110152818915.png)
 
 ### 功能测试
 
@@ -276,6 +276,8 @@ adb shell settings put global captive_portal_server 204.gentool.top
 ## MIC
 
 ### 硬件接线
+
+![image-20250110152824237](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250110152824237.png)
 
 ### 功能测试
 
@@ -295,6 +297,8 @@ Period count:   min=2           max=32768
 ## Speaker Output
 
 ### 硬件接线
+
+
 
 ### 功能测试
 
