--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -298,7 +298,7 @@ Period count:   min=2           max=32768
 
 ### 硬件接线
 
-
+![image-20250110152830177](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250110152830177.png)
 
 ### 功能测试
 
@@ -326,11 +326,15 @@ Period count:   min=2           max=32768
 
 ### 硬件接线
 
+![image-20250110153056417](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250110153056417.png)
+
 
 
 ## FAN
 
 ### 硬件接线
+
+
 
 ### 开关控制
 
