--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -334,7 +334,7 @@ Period count:   min=2           max=32768
 
 ### 硬件接线
 
-
+![image-20250110153117263](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250110153117263.png)
 
 ### 开关控制
 
@@ -354,7 +354,7 @@ K7开发板 配备一路 PCIE 2.0 M.2 SSD硬盘接口
 
 ### 硬件接线
 
-### 
+
 
 ## GPU
 
