--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -354,6 +354,211 @@ K7开发板 配备一路 PCIE 2.0 M.2 SSD硬盘接口
 
 ### 硬件接线
 
+![image-20250110153138855](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250110153138855.png)
+
+
+
+## CAN
+
+支持 CAN FD标准，CAN FD继承了CAN的绝大多数特性，如同样的物理层，双线[串行通信协议](https://zhida.zhihu.com/search?content_id=239082283&content_type=Article&match_order=1&q=串行通信协议&zhida_source=entity)，基于非破坏性仲裁技术，分布式实时控制，可靠的错误处理和检测机制等，同时CAN FD弥补了CAN在总线带宽和数据长度方面的不足。
+
+**查询当前网络设备**
+
+```
+$ ifconfig -a
+...
+can0      Link encap:UNSPEC    Driver rk3576_canfd
+          NOARP  MTU:16  Metric:1
+          RX packets:0 errors:0 dropped:0 overruns:0 frame:0 
+          TX packets:0 errors:0 dropped:0 overruns:0 carrier:0 
+          collisions:0 txqueuelen:10 
+          RX bytes:0 TX bytes:0 
+          Interrupt:63 
+...
+```
+
+
+
+**CAN启动**
+
+关闭CAN
+
+```
+$ ip link set can0 down
+```
+
+设置仲裁段1M波特率，数据段3M波特率
+
+```
+$ ip link set can0 type can bitrate 1000000 dbitrate 3000000 fd on
+```
+
+打印can0信息
+
+```
+$ ip -details link show can0
+```
+
+启动CAN
+
+```
+$ ip link set can0 up
+```
+
+
+
+**CAN发送**
+
+发送（标准帧,数据帧,ID:123,date:DEADBEEF）
+
+```
+$ cansend can0 123#DEADBEEF
+```
+
+发送（扩展帧,数据帧,ID:00000123,date:DEADBEEF）
+
+```
+$ cansend can0 00000123##1DEADBEEF
+```
+
+
+
+**CAN接收**
+
+开启打印，等待接收
+
+```
+$ candump can0
+```
+
+
+
+**回环模式测试**
+
+```
+$ ip link set can0 down
+$ ip link set can0 type can bitrate 500000 sample-point 0.8 dbitrate 2000000 sample-point 0.8 fd on loopback on
+$ ip -details -statistics link show can0
+$ ip link set can0 up
+$ echo 4096 > /sys/class/net/can0/tx_queue_len
+$ candump can0 &
+```
+
+回环模式下，cansend后candump可以接收，说明控制器工作正常。
+
+
+
+## PWM
+
+Extend 40Pin 接口 包含多路PWM
+
+pwmX_Ych_Z，X 表示控制器 id ，Y 表示当前控制器支持的通道总数，Z 表示通道 id 。
+
+PWM 框架在 /sys/class/pwm/ 目录下提供了用户层接口，详见 drivers/pwm/sysfs.c，PWM 驱动加载成功后，会在其下生成 pwmchipX 目录，如 pwmchip0、pwmchip1 等，此处的 X 与 PWM 的控制器或通道 id 无关，仅与 PWM 设备的 probe 顺序有关。
+
+
+
+* dts 打开节点
+
+```
+&pwm2_8ch_6 {
+	pinctrl-0 = <&pwm2m2_ch6>;
+	status = "okay";
+};
+
+&pwm2_8ch_7 {
+	pinctrl-0 = <&pwm2m2_ch7>;
+	status = "okay";
+};
+
+&pwm0_2ch_1 {
+	pinctrl-0 = <&pwm0m0_ch1>;
+	status = "okay";
+};
+```
+
+
+
+* 确认 pwmchip 对应的 pwm
+
+列举相关pwm节点
+
+```
+$ ls /sys/class/pwm/
+pwmchip0  pwmchip1  pwmchip2  pwmchip3
+```
+
+可查看对应pwm dts节点
+
+```
+$ cat /sys/class/pwm/pwmchip0/device/uevent | grep FULLNAME
+OF_FULLNAME=/pwm@27331000
+```
+
+>从 dts 确认对应的节点 
+>
+>pwm0_2ch_1: pwm@27331000
+>
+>pwm2_8ch_6: pwm@2ade6000
+>
+>pwm2_8ch_7: pwm@2ade7000
+>
+>更多详见：kernel-6.1/arch/arm64/boot/dts/rockchip/rk3576.dtsi
+
+
+
+* 配置PWM通道
+
+示例：设置 PWM0_CH1 通道，周期10000ns，占空比5000ns，极性为normal
+
+根据上述信息可知，pwm0_ch1_m0 配置 dts 为 pwm0_2ch_1，即 pwmchip0
+
+```
+$ echo 0 > /sys/class/pwm/pwmchip0/export
+$ echo 10000 > /sys/class/pwm/pwmchip0/pwm0/period
+$ echo 5000 > /sys/class/pwm/pwmchip0/pwm0/duty_cycle
+$ echo normal > /sys/class/pwm/pwmchip0/pwm0/polarity
+$ echo 1 > /sys/class/pwm/pwmchip0/pwm0/enable
+```
+
+> 按照示例配置参数设置成功后，可用万用表测量PWM3引脚，正确电压应为1.6V左右
+
+
+
+## SPI
+
+**回环模式测试**
+
+列出spi设备节点
+
+```
+$ ls /dev/spi*
+/dev/spidev4.0
+```
+
+指定设备进行测试
+
+```
+$ spidev_test -D /dev/spidev4.0 -v -l -p "hello"
+```
+
+> 主控做 Master 端
+>
+> MISO、MOSI 进行短接
+
+
+
+- 示例
+
+```
+root@linaro-alip:/data# ./spidev_test -D /dev/spidev4.0 -v -l -p "hello"
+spi mode: 0x24
+bits per word: 8
+max speed: 500000 Hz (500 kHz)
+TX | 68 65 6C 6C 6F __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __  |hello|
+RX | 68 65 6C 6C 6F __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __  |hello|
+```
+
 
 
 ## GPU
@@ -626,206 +831,4 @@ sys     0m0.377s
 $ source /rockchip-test/chromium/test_chromium_with_video.sh
 ```
 
-
-
-## CAN
-
-支持 CAN FD标准，CAN FD继承了CAN的绝大多数特性，如同样的物理层，双线[串行通信协议](https://zhida.zhihu.com/search?content_id=239082283&content_type=Article&match_order=1&q=串行通信协议&zhida_source=entity)，基于非破坏性仲裁技术，分布式实时控制，可靠的错误处理和检测机制等，同时CAN FD弥补了CAN在总线带宽和数据长度方面的不足。
-
-**查询当前网络设备**
-
-```
-$ ifconfig -a
-...
-can0      Link encap:UNSPEC    Driver rk3576_canfd
-          NOARP  MTU:16  Metric:1
-          RX packets:0 errors:0 dropped:0 overruns:0 frame:0 
-          TX packets:0 errors:0 dropped:0 overruns:0 carrier:0 
-          collisions:0 txqueuelen:10 
-          RX bytes:0 TX bytes:0 
-          Interrupt:63 
-...
-```
-
-
-
-**CAN启动**
-
-关闭CAN
-
-```
-$ ip link set can0 down
-```
-
-设置仲裁段1M波特率，数据段3M波特率
-
-```
-$ ip link set can0 type can bitrate 1000000 dbitrate 3000000 fd on
-```
-
-打印can0信息
-
-```
-$ ip -details link show can0
-```
-
-启动CAN
-
-```
-$ ip link set can0 up
-```
-
-
-
-**CAN发送**
-
-发送（标准帧,数据帧,ID:123,date:DEADBEEF）
-
-```
-$ cansend can0 123#DEADBEEF
-```
-
-发送（扩展帧,数据帧,ID:00000123,date:DEADBEEF）
-
-```
-$ cansend can0 00000123##1DEADBEEF
-```
-
-
-
-**CAN接收**
-
-开启打印，等待接收
-
-```
-$ candump can0
-```
-
-
-
-**回环模式测试**
-
-```
-$ ip link set can0 down
-$ ip link set can0 type can bitrate 500000 sample-point 0.8 dbitrate 2000000 sample-point 0.8 fd on loopback on
-$ ip -details -statistics link show can0
-$ ip link set can0 up
-$ echo 4096 > /sys/class/net/can0/tx_queue_len
-$ candump can0 &
-```
-
-回环模式下，cansend后candump可以接收，说明控制器工作正常。
-
-
-
-## PWM
-
-Extend 40Pin 接口 包含多路PWM
-
-pwmX_Ych_Z，X 表示控制器 id ，Y 表示当前控制器支持的通道总数，Z 表示通道 id 。
-
-PWM 框架在 /sys/class/pwm/ 目录下提供了用户层接口，详见 drivers/pwm/sysfs.c，PWM 驱动加载成功后，会在其下生成 pwmchipX 目录，如 pwmchip0、pwmchip1 等，此处的 X 与 PWM 的控制器或通道 id 无关，仅与 PWM 设备的 probe 顺序有关。
-
-
-
-* dts 打开节点
-
-```
-&pwm2_8ch_6 {
-	pinctrl-0 = <&pwm2m2_ch6>;
-	status = "okay";
-};
-
-&pwm2_8ch_7 {
-	pinctrl-0 = <&pwm2m2_ch7>;
-	status = "okay";
-};
-
-&pwm0_2ch_1 {
-	pinctrl-0 = <&pwm0m0_ch1>;
-	status = "okay";
-};
-```
-
-
-
-* 确认 pwmchip 对应的 pwm
-
-列举相关pwm节点
-
-```
-$ ls /sys/class/pwm/
-pwmchip0  pwmchip1  pwmchip2  pwmchip3
-```
-
-可查看对应pwm dts节点
-
-```
-$ cat /sys/class/pwm/pwmchip0/device/uevent | grep FULLNAME
-OF_FULLNAME=/pwm@27331000
-```
-
->从 dts 确认对应的节点 
->
->pwm0_2ch_1: pwm@27331000
->
->pwm2_8ch_6: pwm@2ade6000
->
->pwm2_8ch_7: pwm@2ade7000
->
->更多详见：kernel-6.1/arch/arm64/boot/dts/rockchip/rk3576.dtsi
-
-
-
-* 配置PWM通道
-
-示例：设置 PWM0_CH1 通道，周期10000ns，占空比5000ns，极性为normal
-
-根据上述信息可知，pwm0_ch1_m0 配置 dts 为 pwm0_2ch_1，即 pwmchip0
-
-```
-$ echo 0 > /sys/class/pwm/pwmchip0/export
-$ echo 10000 > /sys/class/pwm/pwmchip0/pwm0/period
-$ echo 5000 > /sys/class/pwm/pwmchip0/pwm0/duty_cycle
-$ echo normal > /sys/class/pwm/pwmchip0/pwm0/polarity
-$ echo 1 > /sys/class/pwm/pwmchip0/pwm0/enable
-```
-
-> 按照示例配置参数设置成功后，可用万用表测量PWM3引脚，正确电压应为1.6V左右
-
-
-
-## SPI
-
-**回环模式测试**
-
-列出spi设备节点
-
-```
-$ ls /dev/spi*
-/dev/spidev4.0
-```
-
-指定设备进行测试
-
-```
-$ spidev_test -D /dev/spidev4.0 -v -l -p "hello"
-```
-
-> 主控做 Master 端
->
-> MISO、MOSI 进行短接
-
-
-
-- 示例
-
-```
-root@linaro-alip:/data# ./spidev_test -D /dev/spidev4.0 -v -l -p "hello"
-spi mode: 0x24
-bits per word: 8
-max speed: 500000 Hz (500 kHz)
-TX | 68 65 6C 6C 6F __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __  |hello|
-RX | 68 65 6C 6C 6F __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __  |hello|
-```
 
