--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -352,7 +352,7 @@ console:/ # echo 255 > /sys/class/leds/fan/brightness
 
 K7开发板 配备一路 PCIE 2.0 M.2 SSD硬盘接口
 
-### 硬件接线
+**硬件接线**
 
 ![image-20250110153138855](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250110153138855.png)
 
