--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -324,7 +324,7 @@ Period count:   min=2           max=32768
 支持接入RTC电池，掉电RTC IC使用电池保持工作
 ```
 
-### 硬件接线
+**硬件接线**
 
 ![image-20250110153056417](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250110153056417.png)
 
@@ -332,11 +332,11 @@ Period count:   min=2           max=32768
 
 ## FAN
 
-### 硬件接线
+**硬件接线**
 
 ![image-20250110153117263](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250110153117263.png)
 
-### 开关控制
+**开关控制**
 
 ```
 // 打开风扇
