--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -235,11 +235,11 @@ $ cat /sys/bus/iio/devices/iio\:device0/in_voltage*_raw
 
 ## 4G 模块
 
-### 硬件接线
+**硬件接线**
 
 ![image-20250110152808407](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250110152808407.png)
 
-### 功能测试
+**功能测试**
 
 ```
 支持EC20/EC200模块
@@ -261,11 +261,11 @@ adb shell settings put global captive_portal_server 204.gentool.top
 
 ## Headphone
 
-### 硬件接线
+**硬件接线**
 
 ![image-20250110152818915](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250110152818915.png)
 
-### 功能测试
+**说明**
 
 ```
 支持3.5mm耳机接口音频输出
@@ -275,11 +275,11 @@ adb shell settings put global captive_portal_server 204.gentool.top
 
 ## MIC
 
-### 硬件接线
+**硬件接线**
 
 ![image-20250110152824237](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250110152824237.png)
 
-### 功能测试
+**功能测试**
 
 ```
 支持录音座子，接入MIC咪头进行录音即可
@@ -296,11 +296,11 @@ Period count:   min=2           max=32768
 
 ## Speaker Output
 
-### 硬件接线
+**硬件接线**
 
 ![image-20250110152830177](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250110152830177.png)
 
-### 功能测试
+**功能测试**
 
 ```
 支持左声道及右声道喇叭音频输出
