--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -239,7 +239,7 @@ $ cat /sys/bus/iio/devices/iio\:device0/in_voltage*_raw
 
 ![image-20250110152808407](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250110152808407.png)
 
-**功能测试**
+**模块支持**
 
 ```
 支持EC20/EC200模块
