--- a/rk3576/zh/10-系统镜像烧录.md
+++ b/rk3576/zh/10-系统镜像烧录.md
@@ -98,31 +98,31 @@ MASKROM模式：不可分区烧录
 
 步骤一
 
-​		LOADER模式：按下RECOVERY按键，上电 （或者按复位进行复位）
+`LOADER模式`按下RECOVERY按键，上电 （或者按复位进行复位）
 
-​		MASKROM烧录：按下MASKROM按键，上电 （或者按复位进行复位）/ 按下板子背后的MASKROM按键，上电 （或者按复位进行复位）
+`MASKROM模式`按下板子背后的MASKROM按键，上电 （或者按复位进行复位）
 
 步骤二
 
-​		瑞芯微开发工具上能够识别到LOADER设备或MASKROM设备
+瑞芯微开发工具上能够识别到LOADER设备或MASKROM设备
 
 步骤三
 
-​		点击升级固件，跳转到升级固件界面
+点击升级固件，跳转到升级固件界面
 
 步骤四
 
-​		点击固件，选择要烧录的镜像 update-*.img
+点击固件，选择要烧录的镜像 update-*.img
 
 步骤五
 
-​		点击升级
+点击升级
 
-​		等待烧录完成
+等待烧录完成
 
 步骤六
 
-​		重启即可
+重启即可
 
 
 
