--- a/rk3576/zh/10-系统镜像烧录.md
+++ b/rk3576/zh/10-系统镜像烧录.md
@@ -96,33 +96,19 @@ LOADER模式：可分区烧录，分区烧录，详情见更多说明
 MASKROM模式：不可分区烧录
 ```
 
-步骤一
-
-`LOADER模式`按下RECOVERY按键，上电 （或者按复位进行复位）
+1. `LOADER模式`按下RECOVERY按键，上电 （或者按复位进行复位）
 
 `MASKROM模式`按下板子背后的MASKROM按键，上电 （或者按复位进行复位）
 
-步骤二
+2. 瑞芯微开发工具上能够识别到LOADER设备或MASKROM设备
 
-瑞芯微开发工具上能够识别到LOADER设备或MASKROM设备
+3. 点击升级固件，跳转到升级固件界面
 
-步骤三
+4. 点击固件，选择要烧录的镜像 update-*.img
 
-点击升级固件，跳转到升级固件界面
+5. 点击升级，等待烧录完成
 
-步骤四
-
-点击固件，选择要烧录的镜像 update-*.img
-
-步骤五
-
-点击升级
-
-等待烧录完成
-
-步骤六
-
-重启即可
+6. 重启即可
 
 
 
