--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -172,7 +172,7 @@ HDCP v2.3 and HDCP v1.4
 
 可通过[扩展引脚章节](#ExpansionPin-K7) 查看对应的 ADC 位置及通道号
 
-**读取ADC值**
+### **读取ADC值**
 
 ```
 $ cat /sys/bus/iio/devices/iio\:device0/in_voltage*_raw
@@ -187,6 +187,8 @@ $ cat /sys/bus/iio/devices/iio\:device0/in_voltage*_raw
 ## SD 卡
 
 支持SD存储卡，板载Micro SD Card接口
+
+### 硬件接线
 
 ![image-20250110152735195](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250110152735195.png)
 
@@ -210,11 +212,9 @@ $ cat /sys/bus/iio/devices/iio\:device0/in_voltage*_raw
 
 ## 4G 模块
 
-**硬件接线**
+### **硬件接线**
 
 ![image-20250110152808407](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250110152808407.png)
-
-**模块支持**
 
 ```
 支持EC20/EC200模块
@@ -224,11 +224,9 @@ $ cat /sys/bus/iio/devices/iio\:device0/in_voltage*_raw
 
 ## Headphone
 
-**硬件接线**
+### **硬件接线**
 
 ![image-20250110152818915](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250110152818915.png)
-
-**说明**
 
 ```
 支持3.5mm耳机接口音频输出
@@ -238,11 +236,9 @@ $ cat /sys/bus/iio/devices/iio\:device0/in_voltage*_raw
 
 ## MIC
 
-**硬件接线**
+### **硬件接线**
 
 ![image-20250110152824237](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250110152824237.png)
-
-**功能测试**
 
 ```
 支持录音座子，接入MIC咪头进行录音即可
@@ -259,11 +255,9 @@ Period count:   min=2           max=32768
 
 ## Speaker Output
 
-**硬件接线**
+### **硬件接线**
 
 ![image-20250110152830177](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250110152830177.png)
-
-**功能测试**
 
 ```
 支持左声道及右声道喇叭音频输出
@@ -287,7 +281,7 @@ Period count:   min=2           max=32768
 支持接入RTC电池，掉电RTC IC使用电池保持工作
 ```
 
-**硬件接线**
+### **硬件接线**
 
 ![image-20250110153056417](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250110153056417.png)
 
@@ -295,11 +289,11 @@ Period count:   min=2           max=32768
 
 ## FAN
 
-**硬件接线**
+### **硬件接线**
 
 ![image-20250110153117263](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250110153117263.png)
 
-**开关控制**
+### **开关控制**
 
 ```
 // 打开风扇
