--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -4,6 +4,8 @@
 
 ## 1. 扩展引脚<a id="ExpansionPin"></a>
 
+默认软件下，已将拓展引脚配置为列表中带*号
+
 ### K1引脚列表
 
 ![image-20240420181207097](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240420181207097.png)
@@ -58,7 +60,7 @@ $ echo heartbeat > /sys/class/leds/work-led/trigger
 
 ## 3. GPIO
 
-K1开发板的扩展40Pin引脚中默认有9路可控GPIO。
+开发板的扩展引脚中默认配置多路可控GPIO。
 
 首先，通过 [扩展引脚](#ExpansionPin)章节，确认GPIO引脚位置、编号，参考以下步骤可对指定GPIO进行状态控制。
 
