--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -4,7 +4,7 @@
 
 ## 1. 扩展引脚<a id="ExpansionPin"></a>
 
-kickpi 开发板板载扩展引脚，用于各种功能拓展、模块拓展。
+kickpi 开发板板载扩展引脚，可用于连接外部设备、与其他电路板或模块通信、自定义GPIO功能、用于各种外部模块的功能拓展、调试以及测试。
 
 
 
