--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -6,7 +6,7 @@
 
 kickpi 开发板板载扩展引脚，可用于连接外部设备、与其他电路板或模块通信、自定义GPIO功能、用于各种外部模块的功能拓展、调试以及测试。
 
-
+引脚列表标注每个引脚的默认配置，同时还会给出该引脚所对应的可选择配置
 
 默认软件下，已将拓展引脚配置为列表中带*号
 
