--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -6,10 +6,9 @@
 
 kickpi 开发板板载扩展引脚：
 
-* 可用于连接外部设备（温度传感器、湿度传感器等类型传感器）
-* 与其他电路板或模块通信、
-* 自定义GPIO功能、用于各种外部模块的功能拓展、
-* 调试以及测试。
+* 可用于连接外部设备（温度传感器、湿度传感器等）
+* 与其他电路板或模块通信（I2C、SPI、UART等）
+* 自定义GPIO功能
 
 引脚列表标注了每个引脚的默认配置（带*号），同时还会给出该引脚所对应的可选择配置。
 
