--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -10,7 +10,9 @@ kickpi 开发板板载扩展引脚：
 * 与其他电路板或模块通信（I2C、SPI、UART等）
 * 自定义GPIO功能
 
-引脚列表标注了每个引脚的默认配置（带*号），同时还会给出该引脚所对应的可选择配置。
+引脚列表标注了每个引脚的默认配置（带*号），同时给出该引脚所对应的可选择配置。
+
+
 
 ### K1引脚列表
 
