--- a/rk356x/zh/40-RK3568 LCD配置.md
+++ b/rk356x/zh/40-RK3568 LCD配置.md
@@ -48,7 +48,8 @@ RK3568 有三个VP节点，每个VP节点可挂接一个显示屏，对应关系
 显示屏配置 主要修改设备树LCD配置文件，RK3568 设备树LCD配置目录如下：
 
 ```
-$ vim kernel/arch/arm64/boot/dts/rockchip/rk3568-kickpi-k1.dtsi
+$ vim kernel/arch/arm64/boot/dts/rockchip/rk3568-kickpi-k1.dtsi //linux
+$ vim kernel/arch/arm64/boot/dts/rockchip/rk3568-kickpi-k1.dtsi //android
 
 // LCD
 //#include "rk3568-kickpi-lcd-hdmi.dtsi"
