--- a/rk356x/zh/10-系统镜像烧录.md
+++ b/rk356x/zh/10-系统镜像烧录.md
@@ -41,7 +41,7 @@ USB驱动网盘目录：4-开发工具\USB驱动\DriverAssitant\_v5.12.zip
 
 镜像文件可通过以下两种方式获取：网盘下载、SDK编译
 
-SDK编译详细步骤参考文档 \[02-SDK编译]
+SDK编译详细步骤参考文档 [SDK源码编译](11-SDK源码编译.md)
 
 镜像文件网盘目录：
 
