--- a/rk356x/zh/10-系统镜像烧录.md
+++ b/rk356x/zh/10-系统镜像烧录.md
@@ -31,7 +31,7 @@
 
 ### 安装USB驱动
 
-USB驱动网盘目录：开发工具\USB驱动\DriverAssitant\_v5.12.zip
+USB驱动网盘目录：开发工具\USB驱动\DriverAssitant\_*.zip
 
 ![image-20230526154517334](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20230526154517334.png)
 
