--- a/rk356x/zh/10-系统镜像烧录.md
+++ b/rk356x/zh/10-系统镜像烧录.md
@@ -13,12 +13,12 @@
 镜像烧录 准备工具如下所示
 
 ```
-├── 2-System Image 系统镜像
+├── System Image 系统镜像
 │   └── RK3568-K1
 │       ├── Android13
 │       ├── Debian11
 │       └── Ubuntu2004
-└── 4-Development Tools 开发工具
+└── Development Tools 开发工具
     ├── USB Driver USB驱动
     └── USB Image Burn Tool 镜像烧录工具
 ```
@@ -34,7 +34,7 @@
 USB驱动网盘路径：
 
 ```
-开发工具\USB驱动\DriverAssitant\_*.zip
+DevelopmentTools开发工具\USB驱动\DriverAssitant\_*.zip
 ```
 
 ![image-20230526154517334](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20230526154517334.png)
