--- a/rk356x/zh/10-系统镜像烧录.md
+++ b/rk356x/zh/10-系统镜像烧录.md
@@ -31,10 +31,10 @@
 
 ### 安装USB驱动
 
-USB驱动网盘路径：
+USB驱动网盘路径
 
 ```
-DevelopmentTools开发工具\USB驱动\DriverAssitant\_*.zip
+DevelopmentTools开发工具\USB驱动\DriverAssitant_*.zip
 ```
 
 ![image-20230526154517334](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20230526154517334.png)
