--- a/rk356x/zh/10-系统镜像烧录.md
+++ b/rk356x/zh/10-系统镜像烧录.md
@@ -50,7 +50,7 @@ SDK编译详细步骤参考文档 [SDK源码编译](11-SDK源码编译.md)
 镜像文件网盘目录：
 
 ```
-├── 2-System Image 系统镜像
+├── System Image 系统镜像
     └── RK3568-K1
         ├── Android13
         	├── update-rk3568-kickpi-k1-android-hdmi-2023102403.img
