--- a/rk356x/zh/10-系统镜像烧录.md
+++ b/rk356x/zh/10-系统镜像烧录.md
@@ -34,7 +34,7 @@
 USB驱动网盘路径
 
 ```
-DevelopmentTools开发工具\USB驱动\DriverAssitant_*.zip
+DevelopmentTools开发工具\USB驱动\DriverAssitant_v5.12.zip
 ```
 
 ![image-20230526154517334](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20230526154517334.png)
@@ -63,8 +63,6 @@ SDK编译详细步骤参考文档 [SDK源码编译](11-SDK源码编译.md)
 镜像名称解析
 
 ![image-20231024111614065](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20231024111614065.png)
-
-
 
 
 
