--- a/rk356x/zh/10-系统镜像烧录.md
+++ b/rk356x/zh/10-系统镜像烧录.md
@@ -68,7 +68,7 @@ SDK编译详细步骤参考文档 [SDK源码编译](11-SDK源码编译.md)
 
 ### 安装镜像烧录工具
 
-镜像烧录工具网盘目录：4-开发工具\USB镜像烧录工具\RKDevTool\_Release\_v2.96.zip
+镜像烧录工具网盘目录：DevelopmentTools开发工具\USB镜像烧录工具\RKDevTool\_Release\_v2.96.zip
 
 
 
