--- a/rk356x/zh/10-系统镜像烧录.md
+++ b/rk356x/zh/10-系统镜像烧录.md
@@ -117,7 +117,7 @@ Maskrom模式 常用于系统损坏后，强制烧录镜像
 3. 保持长按 RECOVERY按键，并且连接DC电源供电接口进行上电操作(若已上电可按复位键进行复位操作)
 4. 查看 镜像烧录工具 是否正常识别Loader设备/Maskrom设备
 5. 若正常识别到设备，则可松开RECOVERY按键，否则重复上述步骤多尝试几次
-6. 进入Maskrom模式，重复步骤，第3步长按板子背面的maskrom按键
+6. 进入Maskrom模式，重复步骤，注意第3步长按板子背面的maskrom按键，非RECOVERY
 
 
 
