--- a/rk356x/zh/10-系统镜像烧录.md
+++ b/rk356x/zh/10-系统镜像烧录.md
@@ -124,11 +124,11 @@ Maskrom模式 常用于系统损坏后，强制烧录镜像
 
 5. 若正常识别到设备，则可松开RECOVERY按键，否则重复上述步骤多尝试几次
 
-> 进入Maskrom模式，相同步骤，注意第3步长按板子背面的MASKROM按键，非RECOVER按键
+> 进入Maskrom模式，重复操作步骤，注意第3步长按板子背面的MASKROM按键，非RECOVER按键
 
 
 
-### 使用烧录工具进行烧录
+### 进行烧录
 
 烧录镜像 分为 完整镜像烧录 和 分区镜像烧录
 
