--- a/t113-s3/zh/12-硬件功能测试.md
+++ b/t113-s3/zh/12-硬件功能测试.md
@@ -229,6 +229,8 @@ ttyS1  ttyS3  ttyS4  ttyS5
 
 ### 调试串口测试
 
+按下图连接串口，红线无需连接，另一端USB连接电脑
+
 ![{50132506-DFF8-4D5F-B81D-B7BF351E7D1F}](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/{50132506-DFF8-4D5F-B81D-B7BF351E7D1F}.png)
 
 **下载串口助手软件**
