--- a/h618/zh/10-系统镜像烧录.md
+++ b/h618/zh/10-系统镜像烧录.md
@@ -157,7 +157,7 @@ https://support.microsoft.com/zh-cn/windows/%E6%97%A0%E6%B3%95%E5%9C%A8%E6%AD%A4
 
 1. 按住 RECOVERY烧录按键（或板子背面的maskrom按键进入强烧模式）
 2. 主板上电，如果已上电则需重新上电（按一下复位键）
-3. 按一下复位后，烧录键三秒左右松开
+3. 按一下复位后，烧录键至少三秒
 4. 如果电脑有打开烧录软件，会有弹窗提示 (如果没有请多尝试几次上面步骤)
 
 ![image-20240306170600024](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240306170600024.png)
