--- a/h618/zh/20-Ubuntu2204系统定制.md
+++ b/h618/zh/20-Ubuntu2204系统定制.md
@@ -482,3 +482,21 @@ echo r_pio > /sys/kernel/debug/sunxi_pinctrl/dev_name
 cat /sys/kernel/debug/sunxi_pinctrl/dev_name
 ```
 
+
+
+## 常见问题
+
+1. 桌面声卡设置打开报错
+
+![05f3817bf038d6f1f138a290c0496e68](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/05f3817bf038d6f1f138a290c0496e68.jpg)
+
+解决方法：
+
+终端输入
+
+``` shell
+sudo ln -s pavucontrol pavucontrol-qt
+```
+
+
+
