--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -96,9 +96,21 @@ Mobaxterm软件地址下载：https://mobaxterm.mobatek.net/
 
 
 
-## 4. 普通串口
+## 4. adb调试
 
+![image-20250118175413625](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250118175413625.png)
 
+安卓系统可以使用adb进行调试
+
+解压网盘中的adb-tools.rar
+
+在解压的目录打开终端
+
+![image-20250118175214326](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250118175214326.png)
+
+运行adb调试
+
+![image-20250118175438648](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250118175438648.png)
 
 
 
