--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1423,5 +1423,17 @@ RX | 68 65 6C 6C 6F __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ 
 
 ## 29、以太网
 
-### iperf测试
+### iperf测试方法
+
+待完善
+
+
+
+
+
+
+
+
+
+
 
