--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1403,7 +1403,7 @@ RX | 68 65 6C 6C 6F __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ 
 
 
 
-## 28. PCIE
+## 28. PCI-E
 
 ### 硬件接线
 
