--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1405,6 +1405,10 @@ RX | 68 65 6C 6C 6F __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ 
 
 ## 28. PCI-E
 
+适用平台：KICKPI-K8 RK3588
+
+目前仅有RK3588支持PCI-E接口，
+
 ### 硬件接线
 
 * PCI-E X1 接口接法
