--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1405,7 +1405,7 @@ RX | 68 65 6C 6C 6F __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ 
 
 ## 28. PCI-E
 
-适用平台：KICKPI-K8 RK3588
+适用平台：KICKPI-K8 RK3588 Android/Linux
 
 目前仅有RK3588支持PCI-E接口，
 
