--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1407,7 +1407,7 @@ RX | 68 65 6C 6C 6F __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ 
 
 适用平台：KICKPI-K8 RK3588 Android/Linux
 
-目前仅有RK3588支持一路4Lane PCIE3.0接口，最高速率可达3.938GB/s
+目前仅有RK3588支持一路4Lane PCIE3.0接口，理论传输速率可达3.938GB/s
 
 ### 硬件接线
 
