--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1411,17 +1411,15 @@ RX | 68 65 6C 6C 6F __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ 
 
 ### 硬件接线
 
-* PCI-E X1 接口接法
+* PCI-E X1 接口接法（PCIE to USB 3.0 模块）
 
 ![image-20250103184113556](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250103184113556.png)
 
-* PCI-E X4 接口接法
+* PCI-E X4 接口接法（PCIE to SSD 模块）
 
 ![image-20250103184238105](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250103184238105.png)
 
 
-
-> 已测试 PCIE to USB 3.0 模块，PCIE to SSD 模块。
 
 
 
