--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1409,17 +1409,29 @@ RX | 68 65 6C 6C 6F __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ 
 
 目前仅有RK3588支持一路4Lane PCIE3.0接口，理论传输速率可达3.938GB/s
 
+标准PCI-E扩展口可外接市面上通用的PCIE USB扩展卡、PCIE 以太网扩展卡、PCIE SSD扩展卡
 
+### PCIE to USB 3.0测试
 
-### 硬件接线
-
-* PCI-E X1 接口接法（PCIE to USB 3.0 模块）
+* 硬件接线
 
 ![image-20250103184113556](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250103184113556.png)
 
-* PCI-E X4 接口接法（PCIE to SSD 模块）
+* 软件测试
+
+
+
+
+
+### PCIE to SSD测试
+
+* 硬件接线
 
 ![image-20250103184238105](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250103184238105.png)
+
+* 软件测试
+
+
 
 
 
