--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1415,7 +1415,7 @@ RX | 68 65 6C 6C 6F __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ 
 
 ### PCIE to USB 3.0测试
 
-* 硬件接线
+* 硬件接线（PCIE X1模块）
 
 ![image-20250103184113556](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250103184113556.png)
 
@@ -1427,7 +1427,7 @@ RX | 68 65 6C 6C 6F __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ 
 
 ### PCIE to SSD测试
 
-* 硬件接线
+* 硬件接线（PCIE X4模块）
 
 ![image-20250103184238105](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250103184238105.png)
 
