--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1258,7 +1258,9 @@ $ ifconfig <dev> up
 
 适用平台：RK3568 / RK3576 / RK3588
 
-RK部分芯片支持原生CAN接口，
+RK部分芯片支持原生CAN接口，通常引出到扩展引脚上，具体位置可查看扩展引脚部分
+
+芯片原生CAN接口 不可直接使用，需要增加外部电平转接电路
 
 
 
