--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1260,11 +1260,11 @@ $ ifconfig <dev> up
 
 RK部分芯片支持原生CAN接口，通常引出到扩展引脚上，具体位置可查看扩展引脚部分
 
-芯片原生CAN接口 不可直接使用，需要增加外部电平转接电路
+**芯片原生CAN接口 不可直接使用，需要增加外部电平转接电路**
 
 
 
-**CAN** 常⽤命令接口
+
 
 **查询当前⽹络设备**
 
@@ -1274,7 +1274,7 @@ $ ifconfig -a
 
 
 
-**CAN FD启动**
+**CANFD配置**
 
 关闭CAN
 
