--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1453,6 +1453,12 @@ RX | 68 65 6C 6C 6F __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ 
 
 ## 29、以太网
 
+适用平台：RK3568 / RK3562 / RK3576 / RK3588
+
+
+
+
+
 ### iperf测试方法
 
 待完善
