--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1453,7 +1453,9 @@ RX | 68 65 6C 6C 6F __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ __ 
 
 ## 29、以太网
 
-适用平台：RK3568 / RK3562 / RK3576 / RK3588
+适用平台：全平台
+
+
 
 
 
