--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -385,7 +385,7 @@ KICKPI-K2C设计中可选配：1路485（/dev/ttyAS3）一路232(/dev/ttyAS4)
 > | Ctrl+A E | **启用/禁用输入显示**，默认禁用 |
 > | Ctrl+A C | 清屏                            |
 
-如果退出后串口被不正常占用：minicom -s 将 Serial port setup>> F   Hardware Flow Control 关掉
+如果退出后串口被不正常占用：minicom -s 将 Serial port setup>> F   Hardware Flow Control 关掉  然后保存退出
 
 或者使用echo直接发送
 
