--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -4,7 +4,7 @@
 
 **K7拓展引脚列表**
 
-
+![K7_40pin](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/K7_40pin.jpg)
 
 ## LED
 
@@ -217,7 +217,8 @@ $ cat /sys/bus/iio/devices/iio\:device0/in_voltage*_raw
 ![image-20250110152808407](C:\Users\16708\AppData\Roaming\Typora\typora-user-images\image-20250110152808407.png)
 
 ```
-支持EC20/EC200模块
+4G已支持适配EC20/EC200模块
+5G已支持适配RG200U模块
 ```
 
 
