--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -44,8 +44,8 @@ $ echo heartbeat > /sys/class/leds/work/trigger
 
 ```
 $ ls /sys/class/leds/
-GPIO0_A5  GPIO3_D4  GPIO4_D1    SDMMC0_PWREN  mmc2::
-GPIO3_B0  GPIO3_D5  PCIE_PWREN  fan           work
+fan       GPIO3_B0  GPIO3_D5  mmc2::      SDMMC0_PWREN
+GPIO0_A5  GPIO3_D4  GPIO4_D1  PCIE_PWREN  work
 ```
 
 **控制GPIO输出电平状态**
