--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -529,6 +529,10 @@ OpenGL ES 1.1, 2.0 and 3.2, OpenCL 2.1, Vulkan 1.2
 
 **查看GPU使⽤率**
 
+```
+cat /sys/devices/platform/*gpu/utilisation
+```
+
 
 
 **Debian12**
