--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -535,11 +535,9 @@ cat /sys/devices/platform/*gpu/utilisation
 
 > 可以实际看下GPU使⽤率来确定硬加速是否有⽤起来
 
-**Debian12**
-
 **GLmark2 性能测试**
 
-Rockchip Debian 12 文件系统内置 glmark2-es 性能测试工具
+Debian 12 / Ubuntu 文件系统内置 glmark2-es 性能测试工具
 
 1. 板卡连接显示设备
 
