--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -537,7 +537,7 @@ cat /sys/devices/platform/*gpu/utilisation
 
 **GLmark2 性能测试**
 
-Debian 12 / Ubuntu 文件系统内置 glmark2-es 性能测试工具
+Debian / Ubuntu 文件系统内置 glmark2-es 性能测试工具
 
 1. 板卡连接显示设备
 
