--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -550,7 +550,7 @@ $ source /rockchip-test/gpu/test_fullscreen_glmark2.sh
 =======================================================
 ```
 
-> 接入mipi 800x1280 屏测试结果，测试分数为 337
+> Debian12 ，接入mipi 800x1280 屏测试结果，测试分数为 337
 
 
 
