--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -796,3 +796,12 @@ sys     0m0.377s
 $ source /rockchip-test/chromium/test_chromium_with_video.sh
 ```
 
+
+
+## gstreamer
+
+```
+sudo GST_DEBUG=2 gst-launch-1.0 playbin uri=file:///usr/local/test.mp4 video-sink="autovideosink" audio-sink=fakesink
+```
+
+> 如果有mpp调⽤的字样，说明硬件解码成功调用。
