--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -533,7 +533,7 @@ OpenGL ES 1.1, 2.0 and 3.2, OpenCL 2.1, Vulkan 1.2
 cat /sys/devices/platform/*gpu/utilisation
 ```
 
-> 可以实际看下GPU使⽤率来确定硬加速是否有⽤起来
+> 移动鼠标或窗口，可以查看GPU使⽤率来确定硬加速是否有⽤起来
 
 **GLmark2 性能测试**
 
