--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -533,11 +533,11 @@ OpenGL ES 1.1, 2.0 and 3.2, OpenCL 2.1, Vulkan 1.2
 cat /sys/devices/platform/*gpu/utilisation
 ```
 
-> 移动鼠标或窗口，可以查看GPU使⽤率来确定硬加速是否有⽤起来
+> 移动鼠标或窗口或进行GPU测试，可以查看GPU使⽤率来确定硬加速是否有⽤起来
 
 **GLmark2 性能测试**
 
-Debian / Ubuntu 文件系统内置 glmark2-es 性能测试工具
+Debian / Ubuntu 文件系统已内置 glmark2-es 性能测试工具
 
 1. 板卡连接显示设备
 
