--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -656,7 +656,7 @@ Brief - Multimedia
 	4K@60fps video encoders for H.264/H.265
 ```
 
-
+**调试信息**
 
 ```
 export mpp_syslog_perror=1
@@ -668,8 +668,6 @@ echo 0x100 > /sys/module/rk_vcodec/parameters/mpp_dev_debug
 **Debian12**
 
 Rockchip 提供了 MPP 相关 demo 进行使用
-
-
 
 **硬编码测试**
 
