--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -801,6 +801,8 @@ sys     0m0.377s
 
 ```
 $ source /rockchip-test/chromium/test_chromium_with_video.sh
+或
+$ /rockchip-test/chromium/test_chromium_with_video.sh
 ```
 
 
