--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -659,6 +659,10 @@ Brief - Multimedia
 **调试信息**
 
 ```
+打开
+export mpp_syslog_perror=1
+echo 0x100 > /sys/module/rk_vcodec/parameters/mpp_dev_debug
+关闭
 export mpp_syslog_perror=1
 echo 0x100 > /sys/module/rk_vcodec/parameters/mpp_dev_debug
 ```
