--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -660,16 +660,16 @@ Brief - Multimedia
 
 ```
 打开
-export mpp_syslog_perror=1
-echo 0x100 > /sys/module/rk_vcodec/parameters/mpp_dev_debug
+$ export mpp_syslog_perror=1
+$ echo 0x100 > /sys/module/rk_vcodec/parameters/mpp_dev_debug
 关闭
-export mpp_syslog_perror=1
-echo 0x100 > /sys/module/rk_vcodec/parameters/mpp_dev_debug
+$ export mpp_syslog_perror=0
+$ echo 0x100 > /sys/module/rk_vcodec/parameters/mpp_dev_debug
 ```
 
 
 
-**Debian12**
+**Debian / Ubuntu**
 
 Rockchip 提供了 MPP 相关 demo 进行使用
 
