--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -709,11 +709,9 @@ usage: mpi_enc_test [options]
 $ mpi_enc_test -w 4096 -h 2160 -t 7 -o ./test.h264 -n 100
 ```
 
-耗时 4.539s
-
-```
-
-```
+> $ tail -f /var/log/syslog
+>
+> kickpi mpp[3557]: mpi_enc_test: chn 0 encode 100 frames time 3763 ms delay  27 ms fps 26.57 bps 10605252
 
 
 
