--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -721,7 +721,9 @@ $ mpi_enc_test -w 4096 -h 2160 -t 7 -o ./test.h264 -n 100
 $ mpi_enc_test -w 4096 -h 2160 -t 16777220 -o ./test.h265 -n 100
 ```
 
-> 
+> $ tail -f /var/log/syslog
+>
+> kickpi mpp[3560]: mpi_enc_test: chn 0 encode 100 frames time 4086 ms delay  36 ms fps 24.47 bps 19594276
 
 
 
