--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -755,15 +755,9 @@ mpi_dec_test
 $ mpi_dec_test -t 7 -i test.h264 -n 100
 ```
 
-耗时 0.682s
-
-```
-root@linaro-alip:/data# time mpi_dec_test -t 7 -i test.h264 -n 100
-
-real    0m0.682s
-user    0m0.100s
-sys     0m0.391s
-```
+> $ tail -f /var/log/syslog
+>
+> kickpi mpp[3564]: mpi_dec_test: decode 100 frames time 596 ms delay  25 ms fps 167.53
 
 
 
