--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -767,15 +767,9 @@ $ mpi_dec_test -t 7 -i test.h264 -n 100
 $ mpi_dec_test -t 16777220 -i test.h265 -n 100
 ```
 
-耗时 1.023s
-
-```
-root@linaro-alip:/data# time mpi_dec_test -t 16777220 -i test.h265 -n 100
-
-real    0m1.023s
-user    0m0.147s
-sys     0m0.377s
-```
+> $ tail -f /var/log/syslog
+>
+> kickpi mpp[3569]: mpi_dec_test: decode 100 frames time 803 ms delay  49 ms fps 124.47
 
 
 
