--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -667,7 +667,12 @@ $ export mpp_syslog_perror=0
 $ echo 0x100 > /sys/module/rk_vcodec/parameters/mpp_dev_debug
 ```
 
-> 
+> [  893.134037] rk_vcodec: 27b00100.rkvdec:0 session 3705:19 time: 1333 us hw 1312 us
+> [  893.167444] rk_vcodec: 27b00100.rkvdec:0 session 3705:19 time: 1381 us hw 1313 us
+> [  893.200503] rk_vcodec: 27b00100.rkvdec:0 session 3705:19 time: 1420 us hw 1313 us
+> [  893.234046] rk_vcodec: 27b00100.rkvdec:0 session 3705:19 time: 1422 us hw 1316 us
+> [  893.268496] rk_vcodec: 27b00100.rkvdec:0 session 3705:19 time: 2396 us hw 2281 us
+> [  893.334140] rk_vcodec: 27b00100.rkvdec:0 session 3705:19 time: 1438 us hw 1313 us
 
 **Debian / Ubuntu**
 
