--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -535,6 +535,14 @@ cat /sys/devices/platform/*gpu/utilisation
 
 > 移动鼠标或窗口或进行GPU测试，可以查看GPU使⽤率来确定硬加速是否有⽤起来
 
+gpu测试脚本
+
+```
+$ ls /rockchip-test/gpu
+```
+
+
+
 **GLmark2 性能测试**
 
 Debian / Ubuntu 文件系统已内置 glmark2-es 性能测试工具
