--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -535,13 +535,12 @@ cat /sys/devices/platform/*gpu/utilisation
 
 > 移动鼠标或窗口或进行GPU测试，可以查看GPU使⽤率来确定硬加速是否有⽤起来
 
-gpu测试脚本
+**gpu测试脚本**
 
 ```
 $ ls /rockchip-test/gpu
+gpu_test.sh  test_fullscreen_glmark2.sh  test_normal_glmark2.sh test_offscreen_glmark2.sh  test_stress_glmark2.sh
 ```
-
-
 
 **GLmark2 性能测试**
 
