--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -527,7 +527,7 @@ ARM Mali G52 MC3
 OpenGL ES 1.1, 2.0 and 3.2, OpenCL 2.1, Vulkan 1.2
 ```
 
-**查看GPU使⽤率**
+**GPU使⽤率**
 
 ```
 cat /sys/devices/platform/*gpu/utilisation
@@ -535,7 +535,7 @@ cat /sys/devices/platform/*gpu/utilisation
 
 > 移动鼠标或窗口或进行GPU测试，可以查看GPU使⽤率来确定硬加速是否有⽤起来
 
-**gpu测试脚本**
+**GPU测试脚本**
 
 ```
 $ ls /rockchip-test/gpu
