--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -535,7 +535,7 @@ cat /sys/devices/platform/*gpu/utilisation
 
 > 移动鼠标或窗口或进行GPU测试，可以查看GPU使⽤率来确定硬加速是否有⽤起来
 
-**GPU测试脚本**
+Rockchip 提供 npu 测试脚本
 
 ```
 $ ls /rockchip-test/gpu
@@ -576,8 +576,7 @@ Support deep learning frameworks: TensorFlow, Caffe, Tflite, Pytorch, Onnx NN, A
 Rockchip 提供 npu 测试脚本
 
 ```
-# cd /rockchip-test/npu2
-# ls
+# ls /rockchip-test/npu2
 model  npu_freq_scaling.sh  npu_stress_test.sh  npu_test.sh
 ```
 
