--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -571,7 +571,7 @@ Support deep learning frameworks: TensorFlow, Caffe, Tflite, Pytorch, Onnx NN, A
 
 
 
-**Debian12**
+**Debian / Ubuntu**
 
 Rockchip 提供 npu 测试脚本
 
