--- a/h618/zh/31-扩展引脚配置.md
+++ b/h618/zh/31-扩展引脚配置.md
@@ -18,8 +18,9 @@ $ vim longan/device/config/chips/h618/configs/p2/board.dts
 
 **Linux SDK设备树路径**
 
-```
+```shell
 $ vim source/kernel/linux-5.4-h618/arch/arm64/boot/dts/sunxi/sun50iw9-kickpi-k2b.dts
+根据自己的板型选择sun50iw9-kickpi-k2b.dts或sun50iw9-kickpi-k2c.dts
 ```
 
 
