--- a/rk356x/zh/40-RK3568 LCD配置.md
+++ b/rk356x/zh/40-RK3568 LCD配置.md
@@ -131,7 +131,7 @@ PRODUCT_PROPERTY_OVERRIDES += vendor.hwc.device.extend=LVDS,HDMI-A
 
 > 以GT9XX为例
 
-### 驱动的移植
+### 驱动移植
 
 将厂商提供的驱动移植进SDK目录，并修改添加进编译文件
 
