--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -796,7 +796,7 @@ $ source /rockchip-test/chromium/test_chromium_with_video.sh
 
 
 
-## gstreamer
+**gstreamer视频测试**
 
 ```
 sudo GST_DEBUG=2 gst-launch-1.0 playbin uri=file:///usr/local/test.mp4 video-sink="autovideosink" audio-sink=fakesink
