--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -794,6 +794,10 @@ $ mpi_dec_test -t 16777220 -i test.h265 -n 100
 $ source /rockchip-test/chromium/test_chromium_with_video.sh
 ```
 
+> ubuntu 中 chromium 和 gstreamer 配置硬解码存在兼容性问题
+>
+> 默认配置 chromium 进行调用，gstreamer 无用
+
 
 
 **gstreamer视频测试**
