--- a/h618/zh/12-硬件功能测试.md
+++ b/h618/zh/12-硬件功能测试.md
@@ -102,7 +102,7 @@ Mobaxterm软件地址下载：https://mobaxterm.mobatek.net/
 
 安卓系统可以使用adb进行调试
 
-解压网盘中的adb-tools.rar
+解压网盘中的h618_data\5-DevelopmentTools开发工具\ADB Tool\adb-tools.rar
 
 在解压的目录打开终端
 
