--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -788,7 +788,7 @@ $ mpi_dec_test -t 16777220 -i test.h265 -n 100
 
 **chromium视频测试**
 
-板卡连接显示设备，打开虚拟终端 或 调试串口终端，执行以下命令开始chromium视频测试
+板卡连接显示设备，打开虚拟终端 或 调试串口终端，执行以下命令开始 chromium 视频测试
 
 ```
 $ source /rockchip-test/chromium/test_chromium_with_video.sh
@@ -796,7 +796,7 @@ $ source /rockchip-test/chromium/test_chromium_with_video.sh
 
 ubuntu 中 rockchip chromium 和 gstreamer 配置硬解码存在兼容性问题；
 
-默认配置 chromium 进行调用，gstreamer 无用，若chromium未调用硬解码，需要以下命令进行修复
+默认配置 chromium 进行调用，若chromium未调用硬解码，需要以下命令进行修复
 
 ```
 $ source /rockchip-test/chromium/chromium_mpp_fix.sh
@@ -814,4 +814,4 @@ sudo GST_DEBUG=2 gst-launch-1.0 playbin uri=file:///usr/local/test.mp4 video-sin
 
 ubuntu 中 rockchip chromium 和 gstreamer 配置硬解码存在兼容性问题；
 
-默认配置 chromium 进行调用，gstreamer 无用，若chromium未调用硬解码，需要以下命令进行修复
+默认配置 chromium 进行调用，若chromium未调用硬解码，需要以下命令进行修复
