--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -815,3 +815,8 @@ sudo GST_DEBUG=2 gst-launch-1.0 playbin uri=file:///usr/local/test.mp4 video-sin
 ubuntu 中 rockchip chromium 和 gstreamer 配置硬解码存在兼容性问题；
 
 默认配置 chromium 进行调用，若需要 gstreamer 调用硬解码，需要以下命令进行修复
+
+```
+$ source /rockchip-test/chromium/chromium_mpp_fix.sh
+```
+
