--- a/rk3576/zh/12-硬件功能测试.md
+++ b/rk3576/zh/12-硬件功能测试.md
@@ -794,7 +794,7 @@ $ mpi_dec_test -t 16777220 -i test.h265 -n 100
 $ source /rockchip-test/chromium/test_chromium_with_video.sh
 ```
 
-ubuntu 中 rockchip chromium 和 gstreamer 配置硬解码存在兼容性问题；
+ubuntu 中 rockchip chromium 和 gstreamer 配置硬解码存在兼容性问题！
 
 默认配置 chromium 进行调用，若chromium未调用硬解码，需要以下命令进行修复
 
@@ -814,7 +814,7 @@ sudo GST_DEBUG=2 gst-launch-1.0 playbin uri=file:///usr/local/test.mp4 video-sin
 
 > 如果有mpp调⽤的字样，说明硬件解码成功调用。
 
-ubuntu 中 rockchip chromium 和 gstreamer 配置硬解码存在兼容性问题；
+ubuntu 中 rockchip chromium 和 gstreamer 配置硬解码存在兼容性问题！
 
 默认配置 chromium 进行调用，若需要 gstreamer 调用硬解码，需要以下命令进行修复
 
