--- a/rk356x/zh/12-硬件功能测试.md
+++ b/rk356x/zh/12-硬件功能测试.md
@@ -1090,7 +1090,7 @@ numid=31,iface=MIXER,name='PCM Volume'
 **获取声卡指定配置**
 
 ```
-$ amixer cget -c 1 numid=39,iface=MIXER,name='Speaker Switch'
+$ amixer cget -c 1 name='Speaker Switch'
 numid=39,iface=MIXER,name='Speaker Switch'
   ; type=BOOLEAN,access=rw------,values=1
   : values=on
@@ -1124,7 +1124,7 @@ $ aplay -D hw:1,0 1.wav
 
 ```
 $ amixer cset -c 1 name='Headphone Switch' 1
-$ amixer cset -c 1 numid=35,iface=MIXER,name='Output 1 Playback Volume' 20 20
+$ amixer cset -c 1 name='Output 1 Playback Volume' 20 20
 $ aplay -D hw:1,0 1.wav
 ```
 
