--- a/a133/zh/12-硬件功能使用说明.md
+++ b/a133/zh/12-硬件功能使用说明.md
@@ -12,7 +12,7 @@
 
 ## K5Ck扩展引脚
 
-
+![image-20250217134929591](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250217134929591.png)
 
 
 
