--- a/h618/zh/10-系统镜像烧录.md
+++ b/h618/zh/10-系统镜像烧录.md
@@ -253,20 +253,22 @@ SD卡烧录工具建议使用balenaEtcher，可从网盘以下目录下载，或
 镜像可从网盘以下目录获取
 
 ```
-└── 2-System Image 系统镜像
+└── 2-Image镜像
     └── K2B
-       	└── Ubuntu2204
+       	└── Ubuntu2204-SDCARD
 ```
 
 
 
 ### 制作SD启动卡
 
-![image-20240319142047775](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20240319142047775.png)
+使用balenaEtcher烧录Linux镜像的具体步骤如下所示
 
-1. 选择烧录镜像
-2. 烧录SD卡磁盘
-3. 开始烧录
+![image-20250217140243507](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250217140243507.png)
+
+1. 首先选择要烧录的Linux镜像文件的路径
+2. 然后选择TF卡的盘符
+3. 最后点击现在烧录就会开始烧录Linux镜像到TF卡中
 
 
 
@@ -281,7 +283,7 @@ SD卡烧录工具建议使用balenaEtcher，可从网盘以下目录下载，或
 
 调试串口 或 虚拟终端 执行以下命令
 
-```
+```shell
 sudo nand-sata-install
 ```
 
