--- a/h618/zh/10-系统镜像烧录.md
+++ b/h618/zh/10-系统镜像烧录.md
@@ -270,6 +270,10 @@ SD卡烧录工具建议使用balenaEtcher，可从网盘以下目录下载，或
 2. 然后选择TF卡的盘符
 3. 最后点击现在烧录就会开始烧录Linux镜像到TF卡中
 
+![image-20250217140325269](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250217140325269.png)
+
+等待烧录完成
+
 
 
 ### SD卡启动系统
