--- a/h618/zh/10-系统镜像烧录.md
+++ b/h618/zh/10-系统镜像烧录.md
@@ -285,27 +285,15 @@ SD卡烧录工具建议使用balenaEtcher，可从网盘以下目录下载，或
 
 ### 从SD卡拷贝到eMMC
 
-调试串口 或 虚拟终端 执行以下命令
+启动系统后在终端执行以下命令
 
 ```shell
-sudo nand-sata-install
+sudo nand-sata-install 2 1
 ```
+
+密码kickpi
 
 回车选择 默认选项即可
-
-
-
-### Linux系统登陆用户密码
-
-Ubuntu系统用户名/密码：kickpi/kickpi
-
-系统默认没有ROOT密码，su不成功，需要配置ROOT密码
-
-```
-sudo passwd root
-```
-
-
 
 
 
