--- a/h618/zh/10-系统镜像烧录.md
+++ b/h618/zh/10-系统镜像烧录.md
@@ -291,9 +291,14 @@ SD卡烧录工具建议使用balenaEtcher，可从网盘以下目录下载，或
 sudo nand-sata-install 2 1
 ```
 
+
+
+回车
+
+![image-20250217140706329](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250217140706329.png)
+
 密码kickpi
 
-回车选择 默认选项即可
+等待烧录完成
 
-
-
+![image-20250217140819381](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250217140819381.png)
