--- a/h618/zh/10-系统镜像烧录.md
+++ b/h618/zh/10-系统镜像烧录.md
@@ -267,8 +267,8 @@ SD卡烧录工具建议使用balenaEtcher，可从网盘以下目录下载，或
 ![image-20250217140243507](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250217140243507.png)
 
 1. 首先选择要烧录的Linux镜像文件的路径
-2. 然后选择TF卡的盘符
-3. 最后点击现在烧录就会开始烧录Linux镜像到TF卡中
+2. 然后选择SD卡的盘符
+3. 最后点击现在烧录就会开始烧录Linux镜像到SD卡中
 
 ![image-20250217140325269](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250217140325269.png)
 
@@ -278,7 +278,7 @@ SD卡烧录工具建议使用balenaEtcher，可从网盘以下目录下载，或
 
 ### SD卡启动系统
 
-1. SD卡插入到 开发板
+1. 将烧录好系统的SD卡插入到开发板SD卡槽
 2. 开发板上电，SD卡首次启动时间会比较长
 
 
@@ -290,8 +290,6 @@ SD卡烧录工具建议使用balenaEtcher，可从网盘以下目录下载，或
 ```shell
 sudo nand-sata-install 2 1
 ```
-
-
 
 回车
 
