--- a/h618/zh/10-系统镜像烧录.md
+++ b/h618/zh/10-系统镜像烧录.md
@@ -274,6 +274,8 @@ SD卡烧录工具建议使用balenaEtcher，可从网盘以下目录下载，或
 
 等待烧录完成
 
+![image-20250217141221880](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250217141221880.png)
+
 
 
 ### SD卡启动系统
