--- a/h618/zh/10-系统镜像烧录.md
+++ b/h618/zh/10-系统镜像烧录.md
@@ -302,3 +302,12 @@ sudo nand-sata-install 2 1
 等待烧录完成
 
 ![image-20250217140819381](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250217140819381.png)
+
+烧录完成
+
+![image-20250217141607123](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250217141607123.png)
+
+回车之后 断电 取出SD卡再重新上电即可。
+
+
+
