--- a/h618/zh/10-系统镜像烧录.md
+++ b/h618/zh/10-系统镜像烧录.md
@@ -309,5 +309,11 @@ sudo nand-sata-install 2 1
 
 回车之后 断电 取出SD卡再重新上电即可。
 
+出现以下内容正常。
+
+![image-20250217141729269](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20250217141729269.png)
+
+
+
 
 
