--- a/rk356x/zh/40-RK3568 LCD配置.md
+++ b/rk356x/zh/40-RK3568 LCD配置.md
@@ -49,7 +49,7 @@ RK3568 有三个VP节点，每个VP节点可挂接一个显示屏，对应关系
 
 ```
 $ vim kernel/arch/arm64/boot/dts/rockchip/rk3568-kickpi-k1.dtsi //linux
-$ vim kernel/arch/arm64/boot/dts/rockchip/rk3568-kickpi-k1.dtsi //android
+$ vim kernel-5.10/arch/arm64/boot/dts/rockchip/rk3568-kickpi-k1.dtsi //android
 
 // LCD
 //#include "rk3568-kickpi-lcd-hdmi.dtsi"
