--- a/h618/zh/10-系统镜像烧录.md
+++ b/h618/zh/10-系统镜像烧录.md
@@ -6,7 +6,11 @@ Android12.0 可使用 USB烧录线 把镜像烧录到板载eMMC
 
 Ubuntu22.04 需要可把镜像烧录到SD卡，直接用SD卡启动系统 或 将SD卡的系统拷贝到eMMC
 
+镜像可通过网盘这个路径下载
 
+``` 
+h618_data\2-Image镜像\
+```
 
 ## 1. Android eMMC镜像烧录
 
