--- a/rk3576/zh/10-系统镜像烧录.md
+++ b/rk3576/zh/10-系统镜像烧录.md
@@ -33,7 +33,7 @@ Windows烧写工具：
 **USB驱动路径**
 
 ```
-5-DevelopmentTool/DriverAssitant_v5.13.zip
+5-DevelopmentTool开发工具/USB Driver USB驱动/DriverAssitant_v5.13.zip
 ```
 
 将 DriverAssitant_v5.13.zip 解压，打开解压后的文件夹
