--- a/rk3576/zh/10-系统镜像烧录.md
+++ b/rk3576/zh/10-系统镜像烧录.md
@@ -78,7 +78,7 @@ Windows烧写工具：
 调试烧录工具
 
 ```
-5-DevelopmentTool/RKDevTool_v3.30_for_window.zip
+5-DevelopmentTool/USB ImageBurnTool 镜像烧录工具/RKDevTool_v3.30_for_window.zip
 ```
 
 解压 RKDevTool_v3.30_for_window.zip 压缩文件，在文件下找到 RKDevTool.exe ，双击打开
